--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -9,11 +9,14 @@ services:
     restart: unless-stopped
     depends_on:
       - postgres
+      - redis
     ports:
       - '8080:8080'
       - '9229:9229'
     env_file:
       - .env
+    environment:
+      REDIS_HOST: redis
     volumes:
       - .:/app
       - /app/node_modules
@@ -37,6 +40,16 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  redis:
+    image: redis:7-alpine
+    container_name: mtt-redis-dev
+    restart: unless-stopped
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
 
 volumes:
   postgres_data:
+  redis_data:
